kadai4-1:実験の目的まで終了

--- a/実験レポート/4619055_辰川力駆_4.tex
+++ b/実験レポート/4619055_辰川力駆_4.tex
@@ -21,12 +21,20 @@
 % \inputを使っているが，直接書いても良い．
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{実験の要旨}
-背景
 
+実験環境を整備した上で、
+Jupyther notebookでPython言語とそのライブラリの使い方を理解し、
+画像処理の基礎を学習する。
 
 \section{実験の目的}
-目的
 
+画像変換の処理を題材に、
+画像処理のプログラミングと評価を通じて、
+画像処理の基本的な考え方を理解することを目的とする。
+
+第1回目の実験では、濃淡変換の実装と実験を通じて、
+Python言語とライブラリの使用方法、
+画像処理の基本を理解することを目的とする。
 
 \section{課題1}
 \subsection{実験方法}
