--- a/実験レポート/4619055_辰川力駆_4.tex
+++ b/実験レポート/4619055_辰川力駆_4.tex
@@ -149,20 +149,74 @@ $\gamma$の値を小さくしすぎると海の色が真っ黒になってあま
 
 \section{課題3}
 \subsection{実験方法}
+指定した2枚の画像$f$、$f'$について以下の課題に取り組む。
+ここで、画像$f'$は未知の階調変換関数$g(x)$による濃淡変換によって生成される画像、
+すなわち、$f'(i, j)=g(f(i, j))$であるとする。
+
+\begin{enumerate}
+    \item 画像$f$, $f'$を、それぞれ画像ファイル exercise/himeji\_ex3.jpg,exercise/himeji\_ex3\_G?.png から読み込み、画像の幅・高さを求める。("G?"には自分のグループの数字）
+    \item 画像$f(i, j)$, $f'(i, j)$の対応する画素値の散布図を作成する。
+    \item 階調変換関数$g(x)$を推測し、数式として表す。
+    \item 3でで推測した階調変換関数$g(x)$によって画像$f$から画像$f'$が生成されること確かめる。
+          具体的には画像$f'(i, j)$と階調変換関数によって画像$f$から生成された
+          画像$g(f(i, j))$の平均二乗誤差(MSE: Mean Squared Error)
+          $$\mbox{MSE}=\frac{1}{WH}\sum_{j=0}^{H-1} \sum_{i=0}^{W-1} \left(f'(i, j) - g(f(i, j))\right)^2$$
+          が$1$以下であることを確認する。
+          ただし、画素値$f'(i, j)$, $f(i, j)$の最大値、最小値は255、0とする。
+          また、カラー画像の場合のMSEは以下の式で表される。
+          $$\mbox{MSE}=\frac{1}{|C|WH}\sum_{c\in C}\sum_{j=0}^{H-1} \sum_{i=0}^{W-1} \left(f'(i, j, c) - g(f(i, j, c))\right)^2$$
+          ここで，$C=\{R,G,B\}$はチャンネルを表す。
+    \item なぜ結果が完全に一致しないか、すなわち$\mbox{MSE}\neq0$となる理由を考察する。
+\end{enumerate}
+
 \subsection{実験結果}
+
+\begin{enumerate}
+    \item 自分のグループはG4なのでG4として画像を読み込むと、画像の幅は413、高さは310となった。
+    \item 画像$f(i, j)$、$f'(i, j)$の画素値の散布図を作成すると、以下のようになった。
+          \begin{figure}[h]
+              \begin{center}
+                  \includegraphics[scale=0.8]{kadai4_1_5.png}
+              \end{center}
+              \caption{画像$f(i, j)$、$f'(i, j)$の散布図}
+          \end{figure}
+
+    \item 推測した階調変換関数$g(x)$を以下に示す。
+          \begin{equation*}
+              g(x)= -127.2 \sin \frac{\pi x}{64} + 126.6
+          \end{equation*}
+
+          \clearpage
+    \item 推測した階調変換関数$g(x)$から画像を生成したものを下に示す。
+          \begin{figure}[h]
+              \begin{center}
+                  \includegraphics[scale=0.5]{kadai4_1_6.png}
+              \end{center}
+              \caption{推測した$g(x)$から生成した結果}
+          \end{figure}
+
+          また、MSEを計算すると、約0.0979となって1以下であることがわかる。
+\end{enumerate}
+
 \subsection{検討・考察}
 
+推測した階調変換関数を用いてMSEを計算すると、
+1以下になったが、0になることはない。
+これは、散布図から推測したことによることと、
+$\sin$によって近似したことが挙げられる。
+実際には$\sin$関数を用いられて作られた場合があるが、
+見た目だけで容易に$\sin$関数として近似するのが一致しない理由であると考える。
 
-\clearpage
+完全一致を目指すならば、散布図で推測するべきではないと考える。
 
 \section{まとめ}
+本実験では、
+Jupyther notebookでPython言語とそのライブラリの使い方を理解し、
+画像処理の基礎を学習することができた。
 
-
-
-% 参考文献
-\begin{thebibliography}{99}
-
-\end{thebibliography}
+課題では、画像の濃淡変換を学び、
+ガンマ補正によって明るさの調整ができることを学んだ。
+また、散布図から階調変換関数の推定を行った。
 
 \clearpage
 \appendix
@@ -244,5 +298,64 @@ $\gamma$の値を小さくしすぎると海の色が真っ黒になってあま
     show_transform(f, gamma12(f), gamma12)
     show_transform(f, gamma2(f), gamma2)
 \end{lstlisting}
+
+\begin{lstlisting}[style = py,caption=kadai3]
+    #4619055
+    import numpy as np
+    from skimage.io import imread, imsave
+    from skimage.color import rgb2gray, gray2rgb
+    import matplotlib.pyplot as plt
+    %matplotlib inline
+    
+    def show_transform(im1, im2, h):
+        """ 濃淡変換の入力画像，トーンカーブ，出力画像を描画
+            im1 : 入力画像
+            im2 : 出力画像
+            h   : 階調変換関数
+        """
+        plt.figure(figsize=(16, 4))
+        plt.subplot(1, 3, 1)
+        plt.imshow(im1.astype(np.uint8), cmap="gray")
+        
+        plt.subplot(1, 3, 2)
+        I = np.arange(0, 255)
+        plt.xlim(0, 255); plt.ylim(0, 255); plt.gca().set_aspect(1.0)
+        try:
+            y = h(I)
+            plt.plot(I, y)
+        except:
+            x = np.vstack([I, I, I])
+            y = h(x.T)
+            plt.plot(I, y[0,:,0], 'r', label='R')
+            plt.plot(I, y[0,:,1], 'g', label='G')
+            plt.plot(I, y[0,:,2], 'b', label='B')
+            plt.legend()
+       
+        plt.subplot(1, 3, 3)
+        plt.imshow(im2.astype(np.uint8), cmap="gray")
+        
+    f = imread("exercise/himeji_ex3.jpg")
+    f_prime = imread("exercise/himeji_ex3_G4.png")
+    
+    height, width,C =f.shape
+    height_prime, width_prime, _ = f_prime.shape
+    print("f :幅(" + str(width) +"), 高さ(" + str(height)+ ")")
+    print("f':幅(" + str(width_prime) + "), 高さ(" + str(height_prime)+ ")")
+    
+    x_point = f.flatten()
+    y_point = f_prime.flatten()
+    plt.scatter(x_point, y_point)
+    plt.xlabel("f(i, j)")
+    plt.ylabel("f’(i, j)")
+    plt.show()
+    
+    def g(x):
+        return 127.2 * -np.sin(x * np.pi / 64) + 126.6
+    
+    show_transform(f, g(f), g)
+    mse = np.sum((f_prime - g(f))** 2) / (C * width * height)
+    print("MSE:", mse)
+\end{lstlisting}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
