--- a/kadai1/repo/4619055_辰川力駆_1.tex
+++ b/kadai1/repo/4619055_辰川力駆_1.tex
@@ -265,23 +265,99 @@
 
 \subsection{課題6}
 \begin{enumerate}
-    \item 図2のネットワークにおいて、$d_{i,j}(i,j=1,2,...,16)$を求める。
+    \item 図2のネットワークにおいて、$d_{i,j}$は、
+          \begin{center}
+              \(
+              d_{i,j} = \left(
+              \begin{array}{cccccccccccccccc}
+                      0 & 1 & 2 & 1 & 2 & 2 & 1 & 2 & 2 & 3 & 4 & 3 & 3 & 2 & 1 & 3 \\
+                        & 0 & 1 & 2 & 3 & 2 & 2 & 2 & 1 & 2 & 3 & 3 & 3 & 3 & 2 & 4 \\
+                        &   & 0 & 1 & 2 & 3 & 3 & 3 & 2 & 1 & 2 & 4 & 3 & 2 & 3 & 3 \\
+                        &   &   & 0 & 1 & 3 & 2 & 3 & 3 & 2 & 3 & 3 & 2 & 1 & 2 & 2 \\
+                        &   &   &   & 0 & 2 & 1 & 2 & 3 & 3 & 4 & 3 & 3 & 2 & 1 & 1 \\
+                        &   &   &   &   & 0 & 1 & 2 & 1 & 2 & 3 & 3 & 3 & 4 & 3 & 3 \\
+                        &   &   &   &   &   & 0 & 1 & 2 & 3 & 3 & 2 & 2 & 3 & 2 & 2 \\
+                        &   &   &   &   &   &   & 0 & 1 & 2 & 2 & 1 & 1 & 2 & 1 & 3 \\
+                        &   &   &   &   &   &   &   & 0 & 1 & 2 & 2 & 2 & 3 & 2 & 4 \\
+                        &   &   &   &   &   &   &   &   & 0 & 1 & 3 & 2 & 3 & 3 & 4 \\
+                        &   &   &   &   &   &   &   &   &   & 0 & 2 & 1 & 2 & 3 & 5 \\
+                        &   &   &   &   &   &   &   &   &   &   & 0 & 1 & 2 & 2 & 4 \\
+                        &   &   &   &   &   &   &   &   &   &   &   & 0 & 1 & 2 & 4 \\
+                        &   &   &   &   &   &   &   &   &   &   &   &   & 0 & 1 & 3 \\
+                        &   &   &   &   &   &   &   &   &   &   &   &   &   & 0 & 2 \\
+                        &   &   &   &   &   &   &   &   &   &   &   &   &   &   & 0
+                  \end{array}
+              \right)
+              \)
+          \end{center}
     \item 図2のネットワークの平均頂点間距離は
           \begin{eqnarray*}
-              L=\frac{1}{8} \sum_{n = 1}^{8} C_i =0.5042
+              L=\frac{1}{{}_{16} C_{2}} \sum_{i = 1}^{16} \sum_{j = 1,j>i}^{16}d_{i,j} =2.283
           \end{eqnarray*}
           である。
 \end{enumerate}
 
-\subsection{課題7}
 \clearpage
 
+\subsection{課題7}
 
+\begin{enumerate}
+    \item 作成したコードはzipファイルに添付した。
+    \item 1で作成したコードを用いて、次の3つのネットワークの平均頂点間距離とクラスタ係数を求めると、
+          表4のようになった。
 
+          \begin{table}[htb]
+              \caption{3つのネットワークの平均頂点間距離とクラスタ係数}
+              \begin{center}
+                  \begin{tabular}{|c||c|c|}
+                      \hline
+                      ネットワーク                  & $L_{\text{org}}$ & $C_{\text{org}}$ \\ \hline \hline
+                      Zacharyの空手クラブの友人関係 & 2.4082           & 0.5706           \\ \hline
+                      イルカのネットワーク          & 3.3570           & 0.2590           \\ \hline
+                      線虫の神経回路網              & 2.4356           & 0.3371           \\ \hline
+                  \end{tabular}
+              \end{center}
+          \end{table}
+    \item 各々をランダマイズしたネットワークの平均頂点間距離、クラスタ係数は、
+          表5のようになった。
 
+          \begin{table}[htb]
+              \caption{ランダマイズした3つのネットワークの平均頂点間距離とクラスタ係数}
+              \begin{center}
+                  \begin{tabular}{|c||c|c|}
+                      \hline
+                      ネットワーク                  & $\overline{L}_{R}$ & $\overline{C}_{R}$ \\ \hline \hline
+                      Zacharyの空手クラブの友人関係 & 2.0926             & 0.3520             \\ \hline
+                      イルカのネットワーク          & 2.3408             & 0.1161             \\ \hline
+                      線虫の神経回路網              & 2.2678             & 0.1426             \\ \hline
+                  \end{tabular}
+              \end{center}
+          \end{table}
+\end{enumerate}
+
+\clearpage
 \section{考察}
+配布された3つのネットワークについて、スモールワールド構造を有するかを考える。
+\begin{table}[htb]
+    \caption{平均頂点間距離とクラスタ係数の比}
+    \begin{center}
+        \begin{tabular}{|c||c|c|}
+            \hline
+            ネットワーク                  & $\frac{L_{\text{org}}}{\overline{L}_{R}}$ & $\frac{C_{\text{org}}}{\overline{C}_{R}}$ \\ \hline \hline
+            Zacharyの空手クラブの友人関係 & 1.1508                                    & 1.6210                                    \\ \hline
+            イルカのネットワーク          & 1.4341                                    & 2.2308                                    \\ \hline
+            線虫の神経回路網              & 1.0740                                    & 2.3640                                    \\ \hline
+        \end{tabular}
+    \end{center}
+\end{table}
 
+表6より、Zacharyの空手クラブの友人関係、
+イルカのネットワーク、
+線虫の神経回路網
+のすべてが、$\frac{L_{\text{org}}}{\overline{L}_{R}}\thickapprox 1$となった。
+さらに、すべてが、$\frac{C_{\text{org}}}{\overline{C}_{R}} \gg 1$となった。
 
+よって、これらのネットワークについて、すべてスモールワールド構造を有することが分かる。
 \clearpage
 \appendix
 
