--- a/kadai2/day2/4619055_辰川力駆_2.tex
+++ b/kadai2/day2/4619055_辰川力駆_2.tex
@@ -130,16 +130,32 @@ $k$近傍法において、$k=3$に固定したときの訓練データに対す
 
 \subsection{結果}
 \subsubsection*{(1)}
-多クラス分類の際も、同じように混同行列
+多クラス分類の際も、最初は同じように混同行列作成する。
+計算するときは、クラス分のTrue PositiveやFalse Positiveなどを作成する。
+2つのクラスと同様に正しく判定されたものはTrue Positiveとして、
+それ以外はすべてFalse Positiveとする。
+
+多クラス分類の特別な評価指標として、マクロ平均とマイクロ平均がある。
+マクロ平均は各クラスの評価指標の平均を計算しているため、
+各クラスの平均の評価指標を表している。
+各クラスにサンプル数に偏りがあっても、各クラスが公平に扱われる。
+たとえば、マクロ平均適合率は、クラス$L_i$の適合率を$P_i$とすると、
+\begin{eqnarray}
+    \text{マクロ平均適合率}=\frac{\Sigma^N_{i=1} P_i}{N} \nonumber
+\end{eqnarray}
+と表される。
 
 マイクロ平均はデータ全体を考慮して計算される指標であり、
 データセット全体に対する平等的な評価指標といえる。
 しかし、各クラスのサンプルの数に偏りが大きい場合、
 サンプル数の大きいクラスの性能が全体の性能を代表してしまう可能性がある。
-マクロ平均は各クラスの評価指標の平均を計算しているため、
-各クラスの平均の評価指標を表している。
-各クラスにサンプル数に偏りがあっても、各クラスが公平に扱われる。
-\clearpage
+たとえば、マイクロ平均適合率は、クラス$L_i$のTrue Positiveを$TP_i$として、
+False Positiveを$FP_i$とすると、
+\begin{eqnarray}
+    \text{マイクロ平均適合率}=\frac{\Sigma^N_{i=1} TP_i}{\Sigma^N_{i=1} (TP_i+FP_i)} \nonumber
+\end{eqnarray}
+と表される。
+
 \subsubsection*{(2)}
 作成したソースコードは付録のソースコード3に載せた。
 実行した結果は、交差検証したときのグラフとその中で最適な$k$の値を表示し、
