--- a/kadai2/week3.ipynb
+++ b/kadai2/week3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "[532 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fa96b8726d0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fa96e7069d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "Text(0, 0.5, 'true positive rate')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
