--- a/実験レポート/4619055_辰川力駆_2.tex
+++ b/実験レポート/4619055_辰川力駆_2.tex
@@ -84,7 +84,7 @@
 それについて実装したのがソースコード1である。結果を比較すると以下の表1のようになる。
 
 \begin{table}[htb]
-    \caption{ロジスティクス回帰モデルの変数選択をした場合としていない場合}
+    \caption{ロジスティク回帰モデルの変数選択をした場合としていない場合}
     \begin{center}
         \begin{tabular}{|c||c|c|}
             \hline
@@ -165,23 +165,72 @@ RBFカーネルは、
 サポートベクトルマシンを実装するほうが良いと考える。
 
 \subsection{課題3}
+\subsubsection*{課題内容}
 sklearn.datasetの中にあるワインの品質データ(Wine recognition dataset)を用いて、
 今回の実験の手法(ロジスティック、SVM)の中から2値分類を行う。
-\subsubsection*{課題内容}
+
 \subsubsection*{手順}
+\begin{enumerate}
+    \item ロジスティクとSVMに関してPythonで実装する。
+    \item このプログラムを実行する。
+\end{enumerate}
+
 \subsubsection*{結果}
+ワインの品質データに関して、(0,1)の組合せで、
+ロジステック回帰分析と線形カーネルのサポートベクトルマシンを考えた。
+それについて実装したのがソースコード3である。
+結果を比較すると以下の表3のようになる。
+\begin{table}[htb]
+    \caption{ロジステック回帰モデルとサポートベクトルマシンの結果}
+    \begin{center}
+        \begin{tabular}{|c||c|c|}
+            \hline
+                      & ロジステック & 線形SVM \\ \hline \hline
+            accuracy  & 0.94872      & 1.0     \\ \hline
+            汎化誤差  & 0.05128      & 0.0     \\ \hline
+            precision & 0.95         & 1.0     \\ \hline
+            f1 score  & 0.95         & 1.0     \\ \hline
+        \end{tabular}
+    \end{center}
+\end{table}
+
 \subsubsection*{考察}
+
+これらを比較すると、
+線形カーネルのサポートベクトルマシンの方がaccuracy、
+precision、f1 scoreにおいて良い性能だと分かる。
+しかし、ロジステック回帰の方も良い精度なので、どちらも有力な性能であると考える。
+
 \subsection{課題4}
 \subsubsection*{課題内容}
+課題3のワインの品質データに対して3値分類を行う。
+手法についての調査し説明する。
+
 \subsubsection*{手順}
+\begin{enumerate}
+    \item webで3値分類について検索する。
+    \item その3値分類の方法についてPythonで実装する。
+    \item このプログラムを実行する。
+\end{enumerate}
+
 \subsubsection*{結果}
+3値分析の中で決定木について調べた。
+それについて実装したのがソースコード4である。
+結果は正確度が0.94444となった。
+
 \subsubsection*{考察}
+決定木分析は、
+段階的にデータを分割していき、
+木のような分析結果を出力するものなので実装しやすいと考える。
+また、結果からこの学習モデルは、性能が高いものであると分かる。
+
 
 \section{感想}
 先週の感想でも述べたが、自分的には動画を1つにまとめてくれる方が見やすかった。
 良かった点としては、前回よりは端的にまとめていたので見返すことがしやすかった。
 あまり良くなかった点としては、学校に行くのに動画を見るだけなのはあまり良くないと考える。
 
+\clearpage
 \begin{thebibliography}{99}
     \label{sannkoubunnkenn_chapter}
     \bibitem[1]{a}
@@ -202,6 +251,13 @@ sklearn.datasetの中にあるワインの品質データ(Wine recognition datas
     【SVM】rbfカーネルのハイパーパラメータをグリッドサーチとベイズ最適化で探す【irisデータセット】
 
     \url{https://kenyu-life.com/2019/08/24/rbf_svm_gs/}
+
+    最終閲覧日2021/06/20
+
+    \bibitem[4]{d}
+    3種類のワインの科学的特徴を行ってみる-決定木 - AI人工知能テクノロジー
+
+    \url{https://newtechnologylifestyle.net/3%E7%A8%AE%E9%A1%9E%E3%81%AE%E3%83%AF%E3%82%A4%E3%83%B3%E3%81%AE%E7%A7%91%E5%AD%A6%E7%9A%84%E7%89%B9%E5%BE%B4%E3%82%92%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%BF%E3%82%8B-%E6%B1%BA%E5%AE%9A%E6%9C%A8/}
 
     最終閲覧日2021/06/20
 \end{thebibliography}
@@ -320,11 +376,73 @@ sklearn.datasetの中にあるワインの品質データ(Wine recognition datas
 \end{lstlisting}
 
 \begin{lstlisting}[style = py,caption=レポート課題3]
- 
+    from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score
+    import pandas as pd
+    import numpy as np
+    from sklearn.model_selection import train_test_split
+    from sklearn.linear_model import LogisticRegression
+    from sklearn.model_selection import GridSearchCV
+    from sklearn.metrics import classification_report
+    from sklearn.svm import SVC
+    from sklearn.metrics import accuracy_score
+    from sklearn.datasets import load_wine
+    
+    wine = load_wine()
+    data = pd.DataFrame(data=wine.data, columns=wine.feature_names)
+    data['category'] = wine.target
+    data = data.query("category == 0 | category == 1")
+    X = data[data.columns[data.columns != 'category']]
+    Y = data['category']
+    
+    X_tr, X_te, Y_tr, Y_te = train_test_split(X, Y, test_size=0.3, random_state=4619055)
+    
+    lr = LogisticRegression(C=np.inf, solver='newton-cg')
+    
+    lr.fit(X_tr, Y_tr)
+    Y_pred = lr.predict(X_te)
+    print('confusion matrix = \n', confusion_matrix(y_true=Y_te, y_pred=Y_pred))
+    print('accuracy = ', accuracy_score(y_true=Y_te, y_pred=Y_pred))
+    print('汎化誤差 = ', 1-accuracy_score(y_true=Y_te, y_pred=Y_pred))
+    print('precision = ', precision_score(y_true=Y_te, y_pred=Y_pred))
+    print('f1 score = ', f1_score(y_true=Y_te, y_pred=Y_pred))
+    
+    model = SVC(C=1 ,kernel='linear', random_state=4619055)
+    
+    model.fit(X_tr, Y_tr)
+    Y_pred = model.predict(X_te)
+    print('confusion matrix = \n', confusion_matrix(y_true=Y_te, y_pred=Y_pred))
+    print('accuracy = ', accuracy_score(y_true=Y_te, y_pred=Y_pred))
+    print('汎化誤差 = ', 1-accuracy_score(y_true=Y_te, y_pred=Y_pred))
+    print('precision = ', precision_score(y_true=Y_te, y_pred=Y_pred))
+    print('f1 score = ', f1_score(y_true=Y_te, y_pred=Y_pred))
 \end{lstlisting}
 
 \begin{lstlisting}[style = py,caption=レポート課題4]
- 
+    import pandas as pd
+    import numpy as np
+    import matplotlib.pyplot as plt
+    from sklearn.tree import DecisionTreeClassifier
+    from sklearn.tree import export_graphviz
+    from IPython.display import Image
+    from sklearn.model_selection import train_test_split
+    from sklearn.datasets import load_wine
+    from sklearn.metrics import confusion_matrix
+    
+    data= load_wine()
+    dataX = pd.DataFrame(data=data.data,columns=data.feature_names)
+    dataY = pd.DataFrame(data=data.target)
+    dataY = dataY.rename(columns={0: 'class'})
+    X_train, X_test, Y_train, Y_test = train_test_split(dataX, dataY, test_size=0.3,random_state=4619055)
+    clf = DecisionTreeClassifier()
+    clf.fit(X_train,Y_train)
+    df = pd.DataFrame(clf.predict_proba(X_test))
+    df = df.rename(columns={0: 'class_0',1: 'class_1',2: 'class_2'})
+    df = pd.DataFrame(clf.predict(X_test))
+    df = df.rename(columns={0: '判定'})
+    df = pd.DataFrame(confusion_matrix(Y_test,clf.predict(X_test).reshape(-1,1)))
+    df = df.rename(columns={0: 'class_0',1: 'class_1',2: 'class_2'}, index={0: 'class_0',1: 'class_1',2: 'class_2'})
+    print(df)
+    clf.score(X_test,Y_test) 
 \end{lstlisting}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
